# AI_TUTOR

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  hello_llm.py  pyproject.toml  test_tavily.py
.cursor/rules/: project-rules.mdc
src/ai_tutor/: __init__.py
src/ai_tutor/app/: app.py  i18n.py
src/ai_tutor/graph/: lang_tutor.py  tutor.py
src/ai_tutor/llm/: chain.py  providers.py
src/ai_tutor/services/: quiz.py  quiz_store.py  remediation.py  session_store.py  voice.py  web_search.py
tests/: conftest.py  test_graph_prompt.py  test_llm_env.py  test_session_store.py  test_web_search_integration.py
