[project]
name = "ai-tutor"
version = "0.1.0"
description = "A Streamlit AI Tutor app"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AI Tutor Team" }
]

dependencies = [
  "streamlit>=1.33",
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "langchain>=0.3.10",
  "langchain-openai>=0.2.1",
  "langgraph>=0.3.1",
  "audio-recorder-streamlit>=0.0.8",
  "tavily-python>=0.7.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]


